--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -16,15 +16,14 @@
 
     <div class="container justify-content-center">
 
-        <h1><b>Dashboard</b></h1>
+        <h1><b>Dashboard for <%= server.name ;%></b></h1>
         <hr>
 
         <div class="card-columns">
-            <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card border-primary mb-3">
                 <div class="card-body text-center">
                     <p class="card-text">
-                        <h4><b>Game Activity Status</b><br><small>Change the playing game activity of your bot.</small>
-                        </h4>
+                        <h4><b>Game Status</b><br><small>Change the playing game activity of your bot.</small></h4>
                         <form method="post" class="changeGame" action="/change-game-status" class="form-inline">
                             <div class="input-group mb-3">
                                 <input class="form-control" type="text" name="gameStatus" id="gameChangeInput">
@@ -36,42 +35,52 @@
                     </p>
                 </div>
             </div>
-            <div class="card border-success mb-3"style="max-width: 20rem;">
-                <div class="card-header"><h4>Welcome Message</h4></div>
-                    <div class="card-body text-center">
-                        <p class="card-text">
-                            Current<h4><small><%= welcome %></small></h4>
-                            <form method="post" class="changeWelcome" action="/change-welcome" class="form-inline">
-                                <div class="input-group mb-3">
-                                    <textarea class="form-control" name="welcome" id="welcomeInput"rows="3"></textarea>
-                                    <div class="input-group">
-                                        <button type="submit" class="btn btn-primary">Save Game Status</button>
-                                    </div>
+
+            <div class="card border-success mb-3">
+                <div class="card-body text-center">
+                    <p class="card-text">
+                        <h4><b>Bot Prefix</b><br><small>Change the prefix for the bot.</small></h4>
+                        <form method="post" class="setPrefix" action="/change-prefix" class="form-inline">
+                            <div class="input-group mb-3">
+                                <input class="form-control" type="text" name="newPrefix" id="prefixInput">
+                                <div class="input-group-append">
+                                    <button type="submit" class="btn btn-primary">Save Bot Prefix</button>
                                 </div>
-                            </form>
-                        </p>
-                    </div>
+                            </div>
+                        </form>
+                    </p>
                 </div>
+            </div>
+
+            <div class="card border-info mb-3">
+                <div class="card-body text-center">
+                    <p class="card-text">
+                        <h4><b>Change Status</b><br><small>Change status of your bot.</small></h4>
+                        <form method="post" action="/change-status" class="form-inline">
+                            <div class="input-group mb-3">
+                                <select class="custom-select" name="status">
+                                    <option selected="online">Online</option>
+                                    <option value="idle">Idle</option>
+                                    <option value="dnd">Do not Disturb</option>
+                                    <option value="invisible">Invisible</option>
+                                </select>
+                                <div class="input-group-append">
+                                    <button type="submit" class="btn btn-primary">
+                                        Change Status
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </p>
+                </div>
+            </div>
+
             <div class="card bg-success">
                 <div class="card-body text-center">
                     <p class="card-text">Some text inside the third card</p>
                 </div>
             </div>
-            <div class="card bg-danger">
-                <div class="card-body text-center">
-                    <p class="card-text">Some text inside the fourth card</p>
-                </div>
-            </div>
-            <div class="card bg-light">
-                <div class="card-body text-center">
-                    <p class="card-text">Some text inside the fifth card</p>
-                </div>
-            </div>
-            <div class="card bg-info">
-                <div class="card-body text-center">
-                    <p class="card-text">Some text inside the sixth card</p>
-                </div>
-            </div>
+
         </div>
 
 
@@ -112,16 +121,20 @@
                         </p>
                     </div>
 
-                    <div class="col-sm-auto">
-                        <p class="card-text">
-                            <h4><b>Game Status:</b><br><small>Change here the game from your bot.</small></h4>
-                            <form method="post" class="changeGame" action="/change-game-status" class="form-inline">
-                                <div class="input-group mb-3">
-                                    <input class="form-control" type="text" name="gameStatus" id="gameChangeInput">
-                                    <div class="input-group-append">
-                                        <button type="submit" class="btn btn-primary">Save Game Status</button>
-                                    </div>
-                                </div>
+                    <div class="col-md-8">
+                        <p class="card-text text-wrap">
+                            <h4><b>Welcome Message:</b><br><small>Change the welcome message of your bot here.</small>
+                            </h4>
+                            <br>Current Bot Message:
+                            <br>
+                            <div class="alert alert-secondary" role="alert"><%= welcome %></div>
+                            <form method="post" class="changeWelcome" action="/change-welcome" class="form-inline">
+
+                                <textarea class="form-control" name="welcome" id="welcomeInput" rows="3"></textarea>
+                                <br>
+                                <button type="submit" class="btn btn-primary">Save Welcome</button>
+
+
                             </form>
 
                             <hr>
@@ -129,8 +142,6 @@
                             <form method="post" action="/change-status" class="form-inline">
                                 <div class="input-group mb-3">
                                     <select class="form-control" name="status">
-                                        <option value="<%= data.user.localPresence.status %>">Current status:
-                                            <%= data.user.localPresence.status %></option>
                                         <option value="online">Online</option>
                                         <option value="idle">Idle</option>
                                         <option value="dnd">Do not Disturb</option>
